[package]
name = "simple-program-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-program-common = { path = "../simple-program-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
memoffset = "0.9.1"
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
aya-tool = { git = "https://github.com/aya-rs/aya" }


[[bin]]
name = "simple-program"
path = "src/main.rs"
